// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signpost should render correctly 1`] = `
<div
  className="coop-c-signpost"
>
  <a
    className="coop-c-signpost__link"
    data-contentparent=""
    data-contenttype=""
    data-linktext=""
    href="#"
  >
    <div
      className="coop-c-signpost__content"
    >
      <h3
        className="coop-c-signpost__title"
      >
        Sigpost title
      </h3>
      <span
        aria-hidden="true"
        className="coop-c-signpost__icon"
      >
        <svg
          className="coop-c-signpost__icon__svg"
          viewBox="0 0 16 29"
        >
          <path
            d="M1.909 28.11a1.575 1.575 0 0 1-1.115-2.691L11.713 14.5.793 3.58a1.575 1.575 0 1 1 2.23-2.228l12.033 12.033a1.575 1.575 0 0 1 0 2.229L3.023 27.647c-.307.308-.71.463-1.114.463z"
          />
        </svg>
      </span>
    </div>
  </a>
</div>
`;

exports[`Signpost should take a child component as mediacomponent 1`] = `
<div
  className="coop-c-signpost"
>
  <a
    className="coop-c-signpost__link"
    data-contentparent=""
    data-contenttype=""
    data-linktext=""
    href="http://www.coop.co.uk"
  >
    <div
      className="coop-c-signpost__content"
    >
      <h3
        className="coop-c-signpost__title"
      >
        Supporting communities
      </h3>
      <span
        aria-hidden="true"
        className="coop-c-signpost__icon"
      >
        <svg
          className="coop-c-signpost__icon__svg"
          viewBox="0 0 16 29"
        >
          <path
            d="M1.909 28.11a1.575 1.575 0 0 1-1.115-2.691L11.713 14.5.793 3.58a1.575 1.575 0 1 1 2.23-2.228l12.033 12.033a1.575 1.575 0 0 1 0 2.229L3.023 27.647c-.307.308-.71.463-1.114.463z"
          />
        </svg>
      </span>
    </div>
  </a>
</div>
`;
